# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
include $(top_srcdir)/common.mk
inst_PYTHON = \
    all.py cell_complex.py chain_complex_homspace.py chain_complex_morphism.py \
    chain_complex.py cubical_complex.py delta_complex.py examples.py __init__.py \
    homology_group.py \
    simplicial_complex_homset.py simplicial_complex_morphism.py \
    simplicial_complex.py tests.py
