# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
include $(top_srcdir)/common.mk
inst_PYTHON = \
    affine.py \
    affine_factorization.py \
    alcove_path.py \
    all.py \
    catalog_elementary_crystals.py \
    catalog_infinity_crystals.py \
    catalog_kirillov_reshetikhin.py \
    catalog.py \
    crystals.py \
    direct_sum.py \
    elementary_crystals.py \
    fast_crystals.py \
    generalized_young_walls.py \
    highest_weight_crystals.py \
    infinity_crystals.py \
    __init__.py \
    kirillov_reshetikhin.py \
    kyoto_path_model.py \
    littelmann_path.py \
    monomial_crystals.py \
    spins.py \
    tensor_product.py

AM_DEFAULT_SOURCE_EXT = .pyx
inst_LTLIBRARIES = letters.la
letters_la_LIBADD = @CSAGE_LIBS@
