# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
include $(top_srcdir)/common.mk

inst_PYTHON = \
    __init__.py \
    semimonomial_transformation_group.py

AM_DEFAULT_SOURCE_EXT = .pyx
inst_LTLIBRARIES = semimonomial_transformation.la

noinst_HEADERS = semimonomial_transformation.pxd
